Fixed z-index variables and fixed side-menu overlapping button issue

--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -1,192 +1,192 @@
 .wrapper {
-  position: relative;
-  z-index: 2;
-  min-height: 4.615rem;
-  overflow: hidden;
+	position: relative;
+	z-index: $zi-4;
+	min-height: 4.615rem;
+	overflow: hidden;
 
-  &.dark {
-    background-color: $dark-500;
-  }
+	&.dark {
+		background-color: $dark-500;
+	}
 
-  &.extraDark {
-    background-color: $dark-700;
-  }
+	&.extraDark {
+		background-color: $dark-700;
+	}
 
-  padding-top: 1rem;
+	padding-top: 1rem;
 }
 
 .nav {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  --indicator-left: 0;
-  --indicator-width: 0;
+	display: flex;
+	align-items: flex-end;
+	justify-content: space-between;
+	--indicator-left: 0;
+	--indicator-width: 0;
 
-  .title {
-    display: flex;
-    align-items: center;
-    margin-bottom: 0.9rem;
-    cursor: pointer;
+	.title {
+		display: flex;
+		align-items: center;
+		margin-bottom: 0.9rem;
+		cursor: pointer;
 
-    img:first-child {
-      width: 2.5rem;
-      @include transition(all, 0.5s);
-    }
+		img:first-child {
+			width: 2.5rem;
+			@include transition(all, 0.5s);
+		}
 
-    img:last-child {
-      margin-left: 1.25rem;
-      color: $dark-900;
-      @include transition(all, 0.5s);
+		img:last-child {
+			margin-left: 1.25rem;
+			color: $dark-900;
+			@include transition(all, 0.5s);
 
-      @include device(sm) {
-        margin-left: 0.5rem;
-      }
+			@include device(sm) {
+				margin-left: 0.5rem;
+			}
 
-      @include device(xs) {
-        display: none;
-      }
-    }
+			@include device(xs) {
+				display: none;
+			}
+		}
 
-    &.dark,
-    &.extraDark {
-      img {
-        filter: invert(1);
-      }
+		&.dark,
+		&.extraDark {
+			img {
+				filter: invert(1);
+			}
 
-      span {
-        color: $light;
-      }
-    }
-  }
+			span {
+				color: $light;
+			}
+		}
+	}
 
-  .menus {
-    position: relative;
-    margin-bottom: 0.9rem;
+	.menus {
+		position: relative;
+		margin-bottom: 0.9rem;
 
-    .indicator {
-      position: absolute;
-      left: var(--indicator-left);
-      width: var(--indicator-width);
-      bottom: -1.9rem;
-      height: 1px;
-      background-color: $dark-900;
-      transition: 0.5s 0.05s;
-    }
+		.indicator {
+			position: absolute;
+			left: var(--indicator-left);
+			width: var(--indicator-width);
+			bottom: -1.9rem;
+			height: 1px;
+			background-color: $dark-900;
+			transition: 0.5s 0.05s;
+		}
 
-    div {
-      display: inline;
-      padding-bottom: 1rem;
-      color: $dark;
-      font-size: 0.9375rem;
+		div {
+			display: inline;
+			padding-bottom: 1rem;
+			color: $dark;
+			font-size: 0.9375rem;
 
-      &,
-      a {
-        color: $dark;
-        @include transition();
+			&,
+			a {
+				color: $dark;
+				@include transition();
 
-        &:hover,
-        &:focus {
-          color: $dark-475;
-        }
-      }
+				&:hover,
+				&:focus {
+					color: $dark-475;
+				}
+			}
 
-      &:not(:last-child):not(.indicator) {
-        margin-right: 1.5rem;
-      }
-    }
+			&:not(:last-child):not(.indicator) {
+				margin-right: 1.5rem;
+			}
+		}
 
-    &.dark,
-    &.extraDark {
-      div {
-        &,
-        a {
-          color: $light;
+		&.dark,
+		&.extraDark {
+			div {
+				&,
+				a {
+					color: $light;
 
-          &:hover,
-          &:focus {
-            color: $secondary;
-          }
-        }
-      }
+					&:hover,
+					&:focus {
+						color: $secondary;
+					}
+				}
+			}
 
-      .indicator {
-        background-color: $light;
-      }
-    }
+			.indicator {
+				background-color: $light;
+			}
+		}
 
-    @include device(sm) {
-      display: none;
-    }
-  }
+		@include device(sm) {
+			display: none;
+		}
+	}
 
-  &.active {
-    position: fixed;
-    padding: 0 1.25rem;
-    left: 0;
-    width: 100%;
+	&.active {
+		position: fixed;
+		padding: 0 1.25rem;
+		left: 0;
+		width: 100%;
 
-    .title {
-      img {
-        filter: invert(1);
-      }
+		.title {
+			img {
+				filter: invert(1);
+			}
 
-      span {
-        color: $light;
-      }
-    }
-  }
+			span {
+				color: $light;
+			}
+		}
+	}
 }
 
 .separator {
-  width: 100%;
-  height: 0.0625rem;
-  background: linear-gradient(
-    90deg,
-    rgba(130, 130, 130, 0) 0%,
-    rgba(130, 130, 130, 1) 100%
-  );
+	width: 100%;
+	height: 0.0625rem;
+	background: linear-gradient(
+		90deg,
+		rgba(130, 130, 130, 0) 0%,
+		rgba(130, 130, 130, 1) 100%
+	);
 
-  @include device(sm) {
-    display: none;
-  }
+	@include device(sm) {
+		display: none;
+	}
 }
 
 .toggler {
-  display: none;
-  margin-left: 2rem;
-  cursor: pointer;
+	display: none;
+	margin-left: 2rem;
+	cursor: pointer;
 
-  @include device(sm) {
-    display: inline-block;
-    margin-bottom: 1rem;
-  }
+	@include device(sm) {
+		display: inline-block;
+		margin-bottom: 1rem;
+	}
 }
 
 .sideMenu {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  width: 100%;
-  overflow-x: hidden;
-  background-color: $primary;
-  color: $light;
-  z-index: 1;
+	position: fixed;
+	top: 0;
+	right: 0;
+	height: 100vh;
+	width: 100%;
+	overflow-x: hidden;
+	background-color: $primary;
+	color: $light;
+	z-index: $zi-3;
 
-  @include transition(all, 0.3s);
+	@include transition(all, 0.3s);
 
-  &.active {
-    visibility: visible;
-    opacity: 1;
-  }
+	&.active {
+		visibility: visible;
+		opacity: 1;
+	}
 
-  &.inActive {
-    visibility: hidden;
-    opacity: 0;
-  }
+	&.inActive {
+		visibility: hidden;
+		opacity: 0;
+	}
 
-  section {
-    display: flex;
-    flex-flow: column;
-  }
+	section {
+		display: flex;
+		flex-flow: column;
+	}
 }
