--- a/components/nav/side-menu.module.scss
+++ b/components/nav/side-menu.module.scss
@@ -1,154 +1,133 @@
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: $mh;
-  .header {
-    padding-top: 1rem;
-    display: flex;
-    justify-content: space-between;
-    flex: 0 1 auto;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	min-height: $mh;
+	.header {
+		padding-top: 1rem;
+		display: flex;
+		justify-content: space-between;
+		flex: 0 1 auto;
 
-    .title {
-      display: flex;
-      align-items: center;
-      cursor: pointer;
+		.title {
+			display: flex;
+			align-items: center;
+			cursor: pointer;
 
-      img {
-        width: 2.5rem;
-        filter: invert(1);
-      }
+			img {
+				width: 2.5rem;
+				filter: invert(1);
+			}
 
-      span {
-        margin-left: 1.25rem;
-        color: $light;
+			span {
+				margin-left: 1.25rem;
+				color: $light;
 
-        @include device(sm) {
-          margin-left: 0.5rem;
-        }
+				@include device(sm) {
+					margin-left: 0.5rem;
+				}
 
-        @include device(xs) {
-          display: none;
-        }
-      }
-    }
-  }
+				@include device(xs) {
+					display: none;
+				}
+			}
+		}
+	}
 
-  .closeBtn {
-    position: absolute;
-    top: 1.575rem;
-    right: 1.65rem;
-    z-index: 4;
-    background-color: transparent;
-    border: none;
-    margin-left: auto;
-    cursor: pointer;
-    @include transition();
+	.menus {
+		display: flex;
+		flex-flow: column;
+		justify-content: flex-end;
+		flex: 1 1 auto;
+		padding-bottom: 2rem;
 
-    &:hover,
-    &:focus {
-      filter: brightness(70%);
-    }
+		> div {
+			display: inline-block;
+			max-width: max-content;
+			font-weight: lighter;
+			font-size: 2rem;
+			color: $light;
+			padding-bottom: 0.25rem;
+			cursor: pointer;
 
-    img {
-      width: 1.75rem;
-    }
-  }
+			&,
+			a {
+				color: $light;
+			}
 
-  .menus {
-    display: flex;
-    flex-flow: column;
-    justify-content: flex-end;
-    flex: 1 1 auto;
-    padding-bottom: 2rem;
+			&:not(:last-child) {
+				margin-bottom: 1.5rem;
+			}
 
-    > div {
-      display: inline-block;
-      max-width: max-content;
-      font-weight: lighter;
-      font-size: 2rem;
-      color: $light;
-      padding-bottom: 0.25rem;
-      cursor: pointer;
+			&:hover,
+			&:focus {
+				&,
+				a {
+					color: $dark-450;
+				}
+			}
 
-      &,
-      a {
-        color: $light;
-      }
+			&.active {
+				border-bottom: 1px solid $light;
+			}
+		}
 
-      &:not(:last-child) {
-        margin-bottom: 1.5rem;
-      }
+		@media (max-width: 321px) {
+			padding-bottom: 0;
 
-      &:hover,
-      &:focus {
-        &,
-        a {
-          color: $dark-450;
-        }
-      }
+			> div {
+				&:not(:last-child) {
+					margin-bottom: 0.75rem;
+				}
+			}
+		}
+	}
 
-      &.active {
-        border-bottom: 1px solid $light;
-      }
-    }
+	.footer {
+		flex: 0 1 auto;
+		padding: 4rem 0;
+		display: flex;
 
-    @media (max-width: 321px) {
-      padding-bottom: 0;
+		section {
+			&:first-child {
+				width: 55%;
+				margin-right: 2.5rem;
+			}
+		}
 
-      > div {
-        &:not(:last-child) {
-          margin-bottom: 0.75rem;
-        }
-      }
-    }
-  }
+		.heading {
+			margin-bottom: 1rem;
+			font-weight: lighter;
+			color: $secondary;
+		}
 
-  .footer {
-    flex: 0 1 auto;
-    padding: 4rem 0;
-    display: flex;
+		.address {
+			font-weight: lighter;
+			line-height: 1.6;
+			margin-bottom: 2rem;
+		}
 
-    section {
-      &:first-child {
-        width: 55%;
-        margin-right: 2.5rem;
-      }
-    }
+		.socials {
+			display: flex;
+			align-items: center;
 
-    .heading {
-      margin-bottom: 1rem;
-      font-weight: lighter;
-      color: $secondary;
-    }
+			img {
+				display: inline-block;
+				width: 1.5rem;
+				margin-top: 0.25rem;
 
-    .address {
-      font-weight: lighter;
-      line-height: 1.6;
-      margin-bottom: 2rem;
-    }
+				&:first-child {
+					margin-right: 1rem;
+				}
+			}
+		}
 
-    .socials {
-      display: flex;
-      align-items: center;
+		@media (max-width: 321px) {
+			padding: 1rem 0;
 
-      img {
-        display: inline-block;
-        width: 1.5rem;
-        margin-top: 0.25rem;
-
-        &:first-child {
-          margin-right: 1rem;
-        }
-      }
-    }
-
-    @media (max-width: 321px) {
-      padding: 1rem 0;
-
-      .heading {
-        margin-bottom: 0.5rem;
-      }
-    }
-  }
+			.heading {
+				margin-bottom: 0.5rem;
+			}
+		}
+	}
 }
