--- a/components/utils/hamburger/hamburger.module.scss
+++ b/components/utils/hamburger/hamburger.module.scss
@@ -1,6 +1,6 @@
 .hamburger {
 	position: relative;
-	z-index: 1;
+	z-index: $zi-3;
 	width: 2.125rem;
 	height: 1.75rem;
 	-webkit-transform: rotate(0deg);
