--- a/components/utils/splash/splash.module.scss
+++ b/components/utils/splash/splash.module.scss
@@ -10,7 +10,7 @@
 	align-items: center;
 	background-color: $dark;
 	color: $light;
-	z-index: 10;
+	z-index: $zi-10;
 
 	img:first-of-type {
 		width: 8%;
